--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!-- Show only first menu item -->
     <item
-        android:title="@string/menu_add"
         android:id="@+id/menu_add"
+        android:title="@string/menu_add"
         android:icon="@android:drawable/ic_menu_add"
         app:showAsAction="always"/>
     <item
-        android:title="@string/menu_clear"
         android:id="@+id/menu_clear"
+        android:title="@string/menu_clear"
         android:icon="@android:drawable/ic_notification_clear_all"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_exit"
+        android:title="@string/menu_exit"
+        android:icon="@drawable/ic_exit"
         app:showAsAction="never"/>
 </menu>
